# rust-basics

closure_and_iterator/src/: main.rs
collection/src/: main.rs
crate_and_module/: Cargo.toml
crate_and_module/src/: lib.rs  main.rs  test_module.rs
crate_and_module/src/test_module/: sub_module1.rs  sub_module2.rs
error_handling/src/: main.rs
file_operations/: Cargo.toml
file_operations/src/: main.rs  sample.json  sample1.txt  sample2.txt
first_of_all/: Cargo.toml
first_of_all/src/: main.rs
fizzbuzz/src/: main.rs
flow_control/src/: main.rs
ownership_and_reference/: Cargo.toml
ownership_and_reference/src/: main.rs
struct_and_enum/src/: main.rs
tests/src/: lib.rs  main.rs
trait_and_generics/: Cargo.toml
trait_and_generics/src/: lib.rs  main.rs
