[package]
name = "crate_and_module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[profile.dev]
# opt-level = 0 - 3 (default is 0)

[profile.release]
# opt-level = 0 - 3 (default is 3)